tests/snapshots/visual_mode_test__V_backward_selection.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:7
Lines: 1

Buffer:
hello w[o]rld
