tests/snapshots/visual_mode_test__V_delete_and_undo.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
line 1
[l]ine 2
line 3
