tests/snapshots/visual_mode_test__V_from_middle_of_line.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: VisualLine
Cursor: 0:6
Lines: 2

Buffer:
hello [w]orld
test line
