tests/snapshots/visual_mode_test__V_indent.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:4
Lines: 3

Buffer:
    line 1
    [l]ine 2
line 3
