tests/snapshots/visual_mode_test__V_multiple_lines.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: VisualLine
Cursor: 2:0
Lines: 4

Buffer:
line 1
line 2
[l]ine 3
line 4
