tests/snapshots/visual_mode_test__V_select_all.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: VisualLine
Cursor: 0:0
Lines: 3

Buffer:
[l]ine 1
line 2
line 3
