tests/snapshots/visual_mode_test__V_single_line.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: VisualLine
Cursor: 0:0
Lines: 1

Buffer:
[o]nly line
