tests/snapshots/visual_mode_test__V_to_v_switch.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: VisualLine
Cursor: 0:0
Lines: 2

Buffer:
[l]ine 1
line 2
