tests/snapshots/visual_mode_test__V_with_count.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 0:1
Lines: 1

Buffer:
h[e]llo world test
