tests/snapshots/visual_mode_test__V_with_gg.snap
---
source: tests/visual_mode_test.rs
expression: test.snapshot_state()
---
Mode: VisualLine
Cursor: 3:0
Lines: 4

Buffer:
line 1
line 2
line 3
[l]ine 4
